# raffle

./: Cargo.toml  LICENSE  README.md
examples/: generate_raffle_parameters.rs
src/: check.rs  constparse.rs  generate.rs  lib.rs  vouch.rs
